examples/test/testpolicy15514.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15514
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key25: value25
      key8: value46
      key27: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value49
          key42: value32
          key25: value20
